<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pwd_gen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.simurg.passwordgenerator.PwdGen">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:text="@string/TITLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv0"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textAlignment="viewStart" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv1"
                android:layout_weight="1"
                android:text="@string/PASSWORD_LENGTH" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spPassLength" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/INCLUDE_SYMBOLS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv2"
                android:layout_weight="1" />

            <CheckBox
                android:text="@string/C1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbSymbols" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/INCLUDE_NUMBERS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv3"
                android:layout_weight="1" />

            <CheckBox
                android:text="@string/C2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbNumbers" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:text="@string/INCLUDE_LOWER_ALPH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv4"
                android:layout_weight="1" />

            <CheckBox
                android:text="@string/C3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbLowerChars" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/INCLUDE_UPPER_ALPH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv5"
                android:layout_weight="1" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbUpperChars"
                android:text="@string/C4" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/EXCLUDE_SIMILAR_CHARS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv6"
                android:layout_weight="1"/>

            <CheckBox
                android:text="@string/C5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbExcludedSimilar" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/EXCLUDE_AMBIGUOUS_CHARS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv7"
                android:layout_weight="1"/>

            <CheckBox
                android:text="@string/C6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cbExcludedAmbiguous" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <Button
                android:text="@string/GENERATE_PASSWORD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnGenerate"
                style="@style/Widget.AppCompat.Button"
                android:textAllCaps="false"
                android:fontFamily="sans-serif-medium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/GENERATED_PASSWORD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvGeneratedPassword" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
